<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore" />
    <item
        android:id="@+id/navigation_session"
        android:icon="@drawable/calender_ic"
        android:title="@string/session" />
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/chat_ic"
        android:title="@string/chat" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_ic"
        android:title="@string/profile" />
</menu>