<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/saqure_rounded_corner_bluedark" />

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/joinusnow"
                android:textColor="@color/bluedark"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/login_with_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/createanaccount"
            android:textColor="@color/bluedark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edittext_rounded_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/profile_ic" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_rounded_border"
                android:hint="@string/fullname"
                android:textColorHint="@color/gray"
                android:inputType="textEmailAddress"
                android:padding="20dp" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_rounded_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/mail_ic_1" />

        <EditText
            android:id="@+id/email_input_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_rounded_border"
            android:hint="@string/email"
            android:textColorHint="@color/gray"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_rounded_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/calender_copy" />

        <EditText
            android:id="@+id/dobET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:background="@drawable/edittext_rounded_border"
            android:hint="@string/dateofbirth"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_rounded_border"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@drawable/lock_ic" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/gray"
            android:background="@drawable/edittext_rounded_border"
            android:drawableEnd="@drawable/password_visibility_icon"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp" />

    </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_rounded_corner_orange"
            android:padding="20dp"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/or_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/orcontinuewith"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:background="@color/gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_corner_darkwhite"
                android:padding="20dp">

                <Button
                    android:id="@+id/google_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/google_ic" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@drawable/btn_rounded_corner_darkwhite"
                android:padding="20dp">

                <Button
                    android:id="@+id/apple_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/apple_logo" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyamember"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/login_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="@string/login"
                android:textColor="@color/orange"
                android:textSize="20sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>