<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_height="400dp"/>

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dots_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:dotsColor="@color/orange"
            app:dotsCornerRadius="4dp"
            app:dotsSize="12dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/view_pager"
            app:dotsSpacing="4dp"
            app:dotsElevation="5dp"
            app:dotsWidthFactor="2.5"/>

    <TextView
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findprofessionalsthatsuitsyourneeds"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_below="@+id/dots_indicator"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        android:textSize="18sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/poppins_light"
        android:textColor="@color/gray"
        android:layout_below="@id/line1"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/get_started_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/getstarted"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:padding="20dp"
        android:background="@drawable/btn_rounded_corner_orange"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"/>

</RelativeLayout>